--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,10 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  hello: "Hello world!"
+  dev:
+    locales_intro: "A page to check the locales status of the web site"
+    locales_subintro_html: "The logic is managed by <kbd>LocaleAware</kbd> controller concern. It is being tested using this page that <strong> won't </strong> appear in production. Please don't remove this :)"
+    locales_current_locale: "Current Locale"
+    locales_available_locales: "Available Locales"
+    locales_default_locale: "Default Locale"
