error messages helper

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,3 +27,8 @@ en:
     locales_current_locale: "Current Locale"
     locales_available_locales: "Available Locales"
     locales_default_locale: "Default Locale"
+  shared:
+    errors:
+      one: '1 error prohibited this record from being saved:'
+      other: '%{count} errors prohibited this record from being saved:'
+      file_too_big: "too big (max %{size} MB)"
